--- a/Vaibhav/flight.html
+++ b/Vaibhav/flight.html
@@ -9,94 +9,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <!-- <style>
+    <style>
         *{
-            margin: 0px;
-            padding: 0px;
-            box-sizing: border-box;
-            font-family: 'Roboto', sans-serif;
+            color: red;
         }
-        #nav{
-            width: 100%;
-            padding: 20px;
-            display: flex;
-            align-items: center;
-            justify-content: space-around;
-            background-color: #00253c;
-        }
-        #nav>div{
-            color: white;
-        }
-        #nav>div:first-child{
-            width: 30%;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
-        #data{
-            padding-left: 5%;
-            padding-right: 5%;
-            display: flex;
-            flex-direction: column;
-        }
-        #data>div{
-            width: 100%;
-            display: flex;
-        }
-        #data>div:first-child{
-            color: #007E8F;
-            font-size: 14px;
-            margin: 15px;
-        }
-        #data>div:first-child>div{
-            margin-right: 10px;
-        }
-        #data>div:first-child>img{
-            height: 18px;
-            width: 18px;
-            margin-right: 10px;
-        }
-        #data>div:last-child{
-            display: grid;
-            margin: 0px 10px 10px 10px;
-            grid-template-columns: 23% 2% 23% 13% 13% 8%;
-            grid-template-rows: 48px;
-            gap: 10px;
-        }
-        #data>div:last-child>div:nth-child(2){
-            margin: auto;
-        }
-        #data>div:last-child>div:nth-child(6)>button{
-            height: 48px;
-            width: 100px;
-            font-size: 16px;
-            color: white;
-            background-color: #C83259;
-            border: 0px;
-            border-radius: 2px;
-        }
-        .details{
-            display: flex;
-            align-items: center;
-            height: 48px;
-            border: 1px solid black;
-            border-radius: 2px;
-        }
-        .details>img{
-            width: 25px;
-            height: 25px;
-            margin: 10px;
-        }
-        .details>img+div>div:first-child{
-            font-size: 13px;
-        }
-        .details>img+div>div:last-child{
-            width: 100%;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-        }
-    </style> -->
+    </style>
 </head>
 <body>
     <div id="nav">
