--- a/Vaibhav/flight.html
+++ b/Vaibhav/flight.html
@@ -45,7 +45,7 @@
                 <img src="https://www.svgrepo.com/show/416191/basic-location-map.svg" alt="">
                 <div>
                     <div>Flying from</div>
-                    <div>Delhi (DEL-Indira Gandhi Intl.)</div>
+                    <div id="city1">Delhi (DEL-Indira Gandhi Intl.)</div>
                 </div>
             </div>
             <div>
@@ -55,21 +55,21 @@
                 <img src="https://www.svgrepo.com/show/416191/basic-location-map.svg" alt="">
                 <div>
                     <div>Flying to</div>
-                    <div>Goa (GOI-Dabolim)</div>
+                    <div id="city2">Goa (GOI-Dabolim)</div>
                 </div>
             </div>
             <div class="details">
                 <img src="https://www.svgrepo.com/show/416180/basic-calendar-ui.svg" alt="">
                 <div>
                     <div>Departing</div>
-                    <div>May 20</div>
+                    <div id="date1">May 20</div>
                 </div>
             </div>
             <div class="details">
                 <img src="https://www.svgrepo.com/show/416180/basic-calendar-ui.svg" alt="">
                 <div>
                     <div>Returning</div>
-                    <div>May 21</div>
+                    <div id="date2">May 21</div>
                 </div>
             </div>
             <div>
@@ -201,7 +201,7 @@
                 <div>
                     <div id="left">
                         <h4>10:45am - 1:35pm</h4>
-                        <p>Delhi (DEL) - Goa (GOI)</p>
+                        <p id="depart">Delhi (DEL) - Goa (GOI)</p>
                         <div>
                             <div>
                                 <img src="https://images.trvl-media.com/media/content/expus/graphics/static_content/fusion/v0.1b/images/airlines/vector/s/AI_sq.svg" alt="">
