--- a/Vaibhav/flight.html
+++ b/Vaibhav/flight.html
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <div>
-                <button>Search</button>
+                <button id="search">Search</button>
             </div>
         </div>
     </div>
