payemnt to homepage linked

--- a/input-otp.html
+++ b/input-otp.html
@@ -33,7 +33,7 @@
             var status = "success"
             localStorage.setItem("status",JSON.stringify(status))
             alert ("Payment is sucessful")
-            window.location.href = "homepage.html"
+            window.location.href = "index.html"
         }
 
         else
