index name changed to stays

--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@ navList.classList.remove("_Menus-show");
 
 </div>
 <button id="toflight">to flight page</button>
+<button id="tostays">to Stays page</button>
 </body>
 <script>
       var status = JSON.parse(localStorage.getItem("status"))
@@ -222,6 +223,12 @@ navList.classList.remove("_Menus-show");
     {
       event.preventDefault()
       window.location.href="flight.html"
+    })
+    tostays = document.querySelector("#tostays")
+    tostays.addEventListener("click",function(event)
+    {
+      event.preventDefault()
+      window.location.href="suyasha/stays.html"
     })
 </script>
  
