--- a/Suyasha/p3.html
+++ b/Suyasha/p3.html
@@ -22,7 +22,7 @@
             <p class="card-text">4.5/5 Wonderful</p>
             
             <h2> $419 <del> $699</del><span>total </span> </h2>
-            <button onclick="reserve">Reserve</button>
+            <button id="reserve">Reserve</button>
         </div>
 
         <div class="card" >
@@ -34,7 +34,7 @@
             <p class="card-text">Salt Lake</p>
             <p class="card-text">4.4/5 Excellent</p>
             <h2> $419 <del>$699</del> <span> total</span> </h2>
-            <button onclick="reserve">Reserve</button>
+            <button id="reserve">Reserve</button>
 
 
         </div>
@@ -47,7 +47,7 @@
             <p class="card-text"> Kollkata</p>
             <p class="card-text">4.2/5 Very Good</p>
             <h2> $419 <del> $699</del> <span> total </span> </h2>
-            <button onclick="reserve">Reserve</button>
+            <button id="reserve">Reserve</button>
 
         </div>
 
@@ -60,7 +60,7 @@
             <p class="card-text">Kollkata</p>
             <p class="card-text">4.2/5 Very Good</p>
             <h2> $419 <del>$699</del> <span> total  </span> </h2>
-            <button onclick="reserve">Reserve</button>
+            <button id="reserve">Reserve</button>
 
         </div>
         <div class="card" >
@@ -72,7 +72,7 @@
             <p class="card-text">Dumdum</p>
             <p class="card-text">4.1/5 Very Good</p>
             <h2> $419 <del>$699</del> <span> total  </span> </h2>
-            <button onclick="reserve">Reserve</button>
+            <button id="reserve">Reserve</button>
 
         </div>
         <div class="card" >
@@ -84,9 +84,9 @@
             <p class="card-text">Park street</p>
             <p class="card-text">4.1/5 Very Good</p>
             <h2> $419 <del>$699</del> <span> total  </span> </h2>
-            <button onclick="reserve">Reserve</button>
+            <button id="reserve">Reserve</button>
 
 
 </div></div></body></html>
 
-
+<script src="p2.js"></script>
