stays linked to cart

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ navList.classList.remove("_Menus-show");
     tostays.addEventListener("click",function(event)
     {
       event.preventDefault()
-      window.location.href="suyasha/stays.html"
+      window.location.href="stays.html"
     })
 </script>
  
