--- a/flight.html
+++ b/flight.html
@@ -79,7 +79,7 @@
     </div>
     <div id="flight">
         <div>
-            <button id="toflight">to cart page</button>
+            <button id="toflight">To cart page</button>
             <div>Filter by</div>
             <div class="fliterBox">
                 <div class="boxHead">
